--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    
+    <meta charset="utf-8" />
+    <meta charset="ISO-8859-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#66cdaa" />
+    <meta name="description" content="Find APA style citations by DOI link or number in the simplest way."/>
+    <meta name="keywords" content="apa style, cite, document object identifier, scientific paper, academic"/>
+
+    <meta property="og:url" content="https://navasardianmichael.github.io/doi-citation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Citation by DOI" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:description" content="Find APA style citations by DOI link or number in the simplest way." />
+    <meta property="og:site_name" content="Citation by DOI" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="article:author" content="Michael Navasardyan" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <title>Citations by DOI</title>
   </head>
   <body>
