--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta name="theme-color" content="#66cdaa" />
     <meta name="description" content="Find APA style citations by DOI link or number in the simplest way."/>
     <meta name="keywords" content="apa style, cite, document object identifier, scientific paper, academic"/>
+    <meta name="google-site-verification" content="oKcgmON-ywG-URRMl98W-eX5-TkXRIo_eyLLz9dapmc" />
 
     <meta property="og:url" content="https://navasardianmichael.github.io/doi-citation" />
     <meta property="og:type" content="website" />
@@ -22,22 +23,8 @@
     <meta property="og:site_name" content="Citation by DOI" />
     <meta property="og:locale" content="en_US" />
     <meta property="article:author" content="Michael Navasardyan" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
-    <title>Citations by DOI</title>
+    <title>DOI Citations</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
